themed app, chat filter search also for attachments, actionbar and logo

--- a/valuetransfer/src/main/res/layout/dialog_contact_add.xml
+++ b/valuetransfer/src/main/res/layout/dialog_contact_add.xml
@@ -8,8 +8,10 @@
     android:paddingHorizontal="12dp"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
-    android:backgroundTint="@color/colorPrimaryValueTransfer"
-    tools:background="@color/colorPrimaryValueTransfer">
+    android:background="@drawable/dialog_rounded_top"
+    android:backgroundTint="?attr/colorPrimary"
+    tools:backgroundTint="@color/colorPrimaryValueTransfer"
+    tools:background="@drawable/dialog_rounded_top">
 
     <androidx.core.widget.NestedScrollView
         android:id="@+id/nestedScrollView"
@@ -38,7 +40,8 @@
                 android:textSize="20sp"
                 android:textAlignment="center"
                 android:gravity="center_horizontal"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textAllCaps="true"
                 android:textStyle="bold"
                 app:layout_constraintTop_toTopOf="parent"
@@ -53,7 +56,8 @@
                 android:paddingStart="8dp"
                 android:layout_marginTop="8dp"
                 android:text="Send your public key or provide QRcode to your friend"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textSize="12sp"
                 android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:background="@drawable/pill_rounded"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@color/light_gray"
                 android:paddingVertical="8dp"
                 android:lines="1"
                 android:maxLines="1"
@@ -77,6 +81,7 @@
                 android:paddingRight="44dp"
                 android:layout_marginTop="12dp"
                 android:textSize="14sp"
+                android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvMyDetailsTitle" />
@@ -87,7 +92,7 @@
                 android:layout_height="25dp"
                 android:layout_marginEnd="12dp"
                 android:src="@drawable/ic_copy_public_key"
-                app:tint="@color/colorPrimaryValueTransfer"
+                app:tint="?attr/colorBackgroundFloating"
                 tools:tint="@color/colorPrimaryValueTransfer"
                 app:layout_constraintBottom_toBottomOf="@+id/etMyPublicKey"
                 app:layout_constraintEnd_toEndOf="@+id/etMyPublicKey"
@@ -111,7 +116,8 @@
                 android:maxWidth="50dp"
                 app:layout_constraintDimensionRatio="H,1:1"
                 android:layout_gravity="center"
-                android:indeterminateTint="@color/white"
+                android:indeterminateTint="?attr/colorOnPrimary"
+                tools:indeterminateTint="@color/white"
                 android:indeterminateTintMode="src_atop"
                 app:layout_constraintBottom_toBottomOf="@+id/ivMyQRCode"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -125,7 +131,8 @@
                 android:paddingStart="8dp"
                 android:layout_marginTop="12dp"
                 android:text="Paste or scan public key of contact and provide a name"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textSize="12sp"
                 android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -137,7 +144,7 @@
                 android:layout_width="78dp"
                 android:layout_height="78dp"
                 android:background="@drawable/pill_rounded"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@color/light_gray"
                 android:paddingHorizontal="16dp"
                 android:paddingVertical="16dp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -149,7 +156,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/ic_qr_code_scan"
-                    app:tint="@color/colorPrimaryValueTransfer"
+                    app:tint="?attr/colorBackgroundFloating"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -164,7 +171,7 @@
                 android:layout_height="35dp"
                 android:layout_weight="1"
                 android:background="@drawable/pill_rounded"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@color/light_gray"
                 android:paddingVertical="8dp"
                 android:lines="1"
                 android:maxLines="1"
@@ -173,6 +180,8 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="12dp"
                 android:textSize="14sp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray"
                 android:hint="Contact Public Key"
                 android:importantForAutofill="no"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -184,7 +193,7 @@
                 android:layout_width="0dp"
                 android:layout_height="35dp"
                 android:background="@drawable/pill_rounded"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="@color/light_gray"
                 android:paddingVertical="8dp"
                 android:lines="1"
                 android:inputType="textCapSentences"
@@ -192,6 +201,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginStart="8dp"
                 android:textSize="14sp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/gray"
                 android:hint="Contact name"
                 android:importantForAutofill="no"
                 app:layout_constraintEnd_toStartOf="@+id/btnAddContact"
