--- a/valuetransfer/src/main/res/layout/dialog_contact_share.xml
+++ b/valuetransfer/src/main/res/layout/dialog_contact_share.xml
@@ -8,8 +8,10 @@
     android:paddingHorizontal="12dp"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
-    android:backgroundTint="@color/colorPrimaryValueTransfer"
-    tools:background="@color/colorPrimaryValueTransfer">
+    android:background="@drawable/dialog_rounded_top"
+    android:backgroundTint="?attr/colorPrimary"
+    tools:backgroundTint="@color/colorPrimaryValueTransfer"
+    tools:background="@drawable/dialog_rounded_top">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clTitle"
@@ -27,7 +29,8 @@
         android:textSize="20sp"
         android:textAlignment="center"
         android:gravity="center_horizontal"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnPrimary"
+        tools:textColor="@color/white"
         android:textAllCaps="true"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
@@ -53,7 +56,8 @@
             android:layout_height="wrap_content"
             android:paddingStart="8dp"
             android:text="Select the contact to share"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
@@ -66,7 +70,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/light_gray"
             android:paddingVertical="8dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
@@ -80,7 +84,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/light_gray"
             android:gravity="center_vertical"
             android:hint="There are no contacts"
             android:clickable="false"
@@ -88,6 +92,7 @@
             android:paddingStart="8dp"
             android:paddingRight="8dp"
             android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvSelectContactTitle" />
@@ -109,7 +114,8 @@
             android:layout_height="wrap_content"
             android:paddingStart="8dp"
             android:text="Select the recipient"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +128,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/light_gray"
             android:paddingVertical="8dp"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
@@ -136,7 +142,7 @@
             android:layout_height="40dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/light_gray"
             android:gravity="center_vertical"
             android:hint="There are no contacts"
             android:clickable="false"
@@ -144,6 +150,7 @@
             android:paddingStart="8dp"
             android:paddingRight="8dp"
             android:textColor="@color/gray"
+            android:textColorHint="@color/gray"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvSelectRecipientTitle" />
