--- a/valuetransfer/src/main/res/layout/dialog_exchange_gateway.xml
+++ b/valuetransfer/src/main/res/layout/dialog_exchange_gateway.xml
@@ -8,8 +8,10 @@
     android:paddingHorizontal="12dp"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
-    android:backgroundTint="@color/colorPrimaryValueTransfer"
-    tools:background="@color/colorPrimaryValueTransfer">
+    android:background="@drawable/dialog_rounded_top"
+    android:backgroundTint="?attr/colorPrimary"
+    tools:backgroundTint="@color/colorPrimaryValueTransfer"
+    tools:background="@drawable/dialog_rounded_top">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clTitle"
@@ -27,7 +29,8 @@
             android:text="Connect to gateway"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +45,8 @@
             android:text="Sell to gateway"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
             tools:visibility="invisible"
@@ -65,7 +69,8 @@
             android:layout_height="wrap_content"
             android:paddingStart="8dp"
             android:text="Current Balance"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
@@ -108,7 +113,8 @@
             android:layout_height="wrap_content"
             android:paddingStart="8dp"
             android:text="Sell Amount"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="@+id/tvSellAmount"
@@ -154,7 +160,8 @@
         android:layout_marginTop="8dp"
         android:paddingStart="8dp"
         android:text="Gateway"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnPrimary"
+        tools:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
@@ -218,7 +225,8 @@
             android:layout_height="wrap_content"
             android:paddingStart="8dp"
             android:text="Save Gateway"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
@@ -251,7 +259,8 @@
             android:layout_height="wrap_content"
             android:paddingStart="8dp"
             android:text="Prefer Gateway"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
