--- a/valuetransfer/src/main/res/layout/dialog_image.xml
+++ b/valuetransfer/src/main/res/layout/dialog_image.xml
@@ -1,10 +1,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/pill_rounded"
-    android:backgroundTint="@color/colorPrimaryValueTransfer"
+    android:backgroundTint="?attr/colorPrimary"
+    tools:backgroundTint="@color/colorPrimaryValueTransfer"
     android:padding="12dp">
 
     <ImageView
