--- a/valuetransfer/src/main/res/layout/fragment_identity.xml
+++ b/valuetransfer/src/main/res/layout/fragment_identity.xml
@@ -33,7 +33,8 @@
                 android:layout_marginTop="4dp"
                 android:layout_marginEnd="8dp"
                 android:text="Identity Attributes"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toStartOf="@+id/ivAttributesInfoIcon"
                 app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +47,7 @@
                 android:layout_marginStart="8dp"
                 android:padding="4dp"
                 android:src="@drawable/ic_baseline_info_24"
-                app:tint="@color/white"
+                app:tint="?attr/colorOnPrimary"
                 tools:tint="@color/white"
                 android:tooltipText="Attributes provide extra information about you and your identity"
                 app:layout_constraintBottom_toBottomOf="@+id/tvAttributesTitle"
@@ -60,10 +61,11 @@
                 android:layout_marginEnd="12dp"
                 android:padding="4dp"
                 android:background="@drawable/pill_rounded"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="?attr/colorOnPrimary"
+                tools:backgroundTint="@color/white"
                 android:src="@drawable/ic_add_black_24dp"
                 tools:background="@drawable/pill_rounded"
-                app:tint="@color/colorPrimaryValueTransfer"
+                app:tint="?attr/colorPrimary"
                 tools:tint="@color/colorPrimaryValueTransfer"
                 app:layout_constraintBottom_toBottomOf="@+id/tvAttributesTitle"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +80,8 @@
                 android:background="@drawable/pill_rounded"
                 android:paddingVertical="4dp"
                 android:text="There are no attributes yet"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textStyle="italic"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +105,8 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="8dp"
                 android:text="Attestations"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toStartOf="@+id/ivAttestationsInfoIcon"
                 app:layout_constraintStart_toStartOf="parent"
@@ -129,10 +133,11 @@
                 android:layout_marginEnd="12dp"
                 android:padding="4dp"
                 android:background="@drawable/pill_rounded"
-                android:backgroundTint="@color/white"
+                android:backgroundTint="?attr/colorOnPrimary"
+                tools:backgroundTint="@color/white"
                 android:src="@drawable/ic_add_black_24dp"
                 tools:background="@drawable/pill_rounded"
-                app:tint="@color/colorPrimaryValueTransfer"
+                app:tint="?attr/colorPrimary"
                 tools:tint="@color/colorPrimaryValueTransfer"
                 app:layout_constraintBottom_toBottomOf="@+id/tvAttestationsTitle"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -147,32 +152,14 @@
                 android:background="@drawable/pill_rounded"
                 android:paddingVertical="4dp"
                 android:text="There are no attestations yet"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textStyle="italic"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvAttestationsTitle"
                 tools:visibility="visible" />
-
-<!--            <TextView-->
-<!--                android:id="@+id/tvNoAttestations"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_margin="12dp"-->
-<!--                android:background="@drawable/pill_rounded"-->
-<!--                android:backgroundTint="@color/white"-->
-<!--                android:gravity="center"-->
-<!--                android:paddingHorizontal="12dp"-->
-<!--                android:paddingVertical="16dp"-->
-<!--                android:text="CLICK HERE TO ADD ATTESTATION"-->
-<!--                android:textColor="@color/colorPrimaryValueTransfer"-->
-<!--                android:textStyle="bold"-->
-<!--                android:visibility="gone"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toBottomOf="@+id/tvAttestationsTitle"-->
-<!--                tools:visibility="visible" />-->
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvAttestations"
@@ -184,17 +171,4 @@
                 tools:listitem="@layout/item_identity_attestation" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
-
-<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
-<!--        android:id="@+id/bnvIdentity"-->
-<!--        style="@style/BottomNavigation"-->
-<!--        android:layout_width="0dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="0dp"-->
-<!--        android:layout_marginEnd="0dp"-->
-<!--        android:background="@color/colorPrimaryValueTransfer"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:menu="@menu/valuetransfer_navigation_menu" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
