--- a/valuetransfer/src/main/res/layout/item_identity.xml
+++ b/valuetransfer/src/main/res/layout/item_identity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryValueTransfer"
+    tools:background="@color/colorPrimaryValueTransfer"
     android:paddingHorizontal="12dp"
     android:paddingBottom="4dp">
 
@@ -12,7 +12,7 @@
         android:id="@+id/clIdentityCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/square_rounded_dark_green"
+        android:background="@drawable/square_rounded"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -51,7 +51,8 @@
                 android:id="@+id/tvIdentityGivenNamesSurname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -64,7 +65,8 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:maxLines="2"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
