--- a/valuetransfer/src/main/res/layout/item_identity_attestation_authorities.xml
+++ b/valuetransfer/src/main/res/layout/item_identity_attestation_authorities.xml
@@ -4,15 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryValueTransfer"
-    android:paddingBottom="4dp">
+    android:paddingBottom="4dp"
+    android:background="?attr/colorPrimary"
+    tools:background="@color/colorPrimaryValueTransfer">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clIdentityCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
-        android:background="@drawable/square_rounded_dark_green"
+        android:background="@drawable/square_rounded"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -25,7 +26,8 @@
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/ivAuthorityDelete"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,7 +41,8 @@
             android:layout_marginEnd="8dp"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/gray"
+            android:textColor="?attr/colorSecondary"
+            tools:textColor="@color/gray"
             android:textSize="12sp"
             app:layout_constraintEnd_toStartOf="@+id/ivAuthorityDelete"
             app:layout_constraintStart_toStartOf="parent"
