--- a/valuetransfer/src/main/res/drawable/square_rounded.xml
+++ b/valuetransfer/src/main/res/drawable/square_rounded.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorRed"/>
-    <corners
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp" />
+    <solid android:color="?attr/colorPrimaryDark"/>
+    <corners android:radius="10dp" />
 </shape>
