--- a/valuetransfer/src/main/res/layout/dialog_confirm.xml
+++ b/valuetransfer/src/main/res/layout/dialog_confirm.xml
@@ -4,8 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/pill_rounded"
-    android:backgroundTint="@color/colorPrimaryValueTransfer"
+    android:background="@drawable/dialog_rounded_top"
+    android:backgroundTint="?attr/colorPrimary"
+    tools:backgroundTint="@color/colorPrimaryValueTransfer"
+    tools:background="@drawable/dialog_rounded_top"
     android:padding="28dp">
 
     <TextView
@@ -13,7 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Are you sure?"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnPrimary"
+        tools:textColor="@color/white"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,13 +25,13 @@
 
     <Button
         android:id="@+id/btnPositive"
-        style="@style/ButtonWhiteRounded"
+        style="@style/ButtonLightGrayRounded"
         android:layout_width="wrap_content"
         android:layout_height="35dp"
         android:layout_marginTop="12dp"
         android:text="OK"
         tools:background="@drawable/button_rounded"
-        tools:backgroundTint="@color/white"
+        tools:backgroundTint="@color/light_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
@@ -41,21 +44,7 @@
         android:layout_marginTop="12dp"
         android:text="CANCEL"
         tools:background="@drawable/button_rounded"
-        tools:backgroundTint="@color/white"
+        tools:backgroundTint="@color/light_gray"
         app:layout_constraintEnd_toStartOf="@+id/btnPositive"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
-
-
-
-    <!--    <Button-->
-    <!--        android:id="@+id/btnCloseDialog"-->
-    <!--        style="@style/ButtonDarkGreenRounded"-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="35dp"-->
-    <!--        android:layout_marginTop="8dp"-->
-    <!--        android:text="CLOSE"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintTop_toBottomOf="@+id/ivImageFullScreen"-->
-    <!--        app:layout_constraintStart_toStartOf="parent" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
