--- a/valuetransfer/src/main/res/layout/dialog_contact_rename.xml
+++ b/valuetransfer/src/main/res/layout/dialog_contact_rename.xml
@@ -8,8 +8,10 @@
     android:paddingHorizontal="12dp"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
-    android:backgroundTint="@color/colorPrimaryValueTransfer"
-    tools:background="@color/colorPrimaryValueTransfer">
+    android:background="@drawable/dialog_rounded_top"
+    android:backgroundTint="?attr/colorPrimary"
+    tools:backgroundTint="@color/colorPrimaryValueTransfer"
+    tools:background="@drawable/dialog_rounded_top">
 
     <TextView
         android:id="@+id/tvTitle"
@@ -19,7 +21,8 @@
         android:textSize="20sp"
         android:textAlignment="center"
         android:gravity="center_horizontal"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnPrimary"
+        tools:textColor="@color/white"
         android:textAllCaps="true"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
@@ -33,12 +36,15 @@
         android:layout_height="40dp"
         android:layout_weight="1"
         android:background="@drawable/pill_rounded"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/light_gray"
         android:inputType="textCapWords"
         android:paddingVertical="8dp"
         android:paddingStart="8dp"
         android:layout_marginTop="12dp"
         android:textSize="14sp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/gray"
+        android:hint="Provide a name for this contact"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
