--- a/valuetransfer/src/main/res/layout/dialog_identity_attestation_confirm.xml
+++ b/valuetransfer/src/main/res/layout/dialog_identity_attestation_confirm.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/colorPrimaryValueTransfer"
     android:paddingHorizontal="12dp"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
-    tools:background="@color/colorPrimaryValueTransfer">
+    android:background="@drawable/dialog_rounded_top"
+    android:backgroundTint="?attr/colorPrimary"
+    tools:backgroundTint="@color/colorPrimaryValueTransfer"
+    tools:background="@drawable/dialog_rounded_top">
 
     <TextView
         android:id="@+id/tvTitle"
@@ -18,7 +20,8 @@
         android:text="CONFIRM ATTESTATION REQUEST"
         android:textAlignment="center"
         android:textAllCaps="true"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnPrimary"
+        tools:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +36,8 @@
         android:gravity="center_horizontal"
         android:textAlignment="center"
         android:text="An attestation has been requested with name XXX and format YYY. Please confirm the attestation by providing the requested value."
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnPrimary"
+        tools:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,12 +57,14 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
-            android:hint="Requested attribute value"
+            android:backgroundTint="@color/light_gray"
+            android:hint="Provide requested attribute value"
             android:inputType="textCapWords"
             android:paddingVertical="8dp"
             android:paddingHorizontal="8dp"
             android:textSize="14sp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -68,7 +74,7 @@
             android:layout_width="0dp"
             android:layout_height="40dp"
             android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/light_gray"
             android:paddingVertical="8dp"
             android:paddingHorizontal="8dp"
             android:gravity="center_vertical"
