--- a/valuetransfer/src/main/res/layout/dialog_identity_attestation_verify.xml
+++ b/valuetransfer/src/main/res/layout/dialog_identity_attestation_verify.xml
@@ -5,11 +5,13 @@
     android:id="@+id/clVerificationDialog"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/colorPrimaryValueTransfer"
     android:paddingHorizontal="12dp"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
-    tools:background="@color/colorPrimaryValueTransfer">
+    android:background="@drawable/dialog_rounded_top"
+    android:backgroundTint="?attr/colorPrimary"
+    tools:backgroundTint="@color/colorPrimaryValueTransfer"
+    tools:background="@drawable/dialog_rounded_top">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clVerificationSummary"
@@ -28,7 +30,8 @@
             android:text="VERIFY ATTESTATION"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +44,8 @@
             android:layout_height="wrap_content"
             android:paddingStart="8dp"
             android:text="From"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +58,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="4dp"
             android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/light_gray"
             android:cursorVisible="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
@@ -64,7 +68,7 @@
             android:paddingVertical="8dp"
             android:paddingHorizontal="8dp"
             android:textSize="14sp"
-            android:textColor="@color/dark_gray"
+            android:textColor="@color/gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvAttestationFromTitle" />
@@ -76,7 +80,8 @@
             android:layout_marginTop="8dp"
             android:paddingStart="8dp"
             android:text="Attribute"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,7 +94,7 @@
             android:layout_marginTop="4dp"
             android:layout_marginEnd="4dp"
             android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/light_gray"
             android:cursorVisible="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
@@ -99,7 +104,7 @@
             android:paddingVertical="8dp"
             android:paddingStart="8dp"
             android:textSize="14sp"
-            android:textColor="@color/dark_gray"
+            android:textColor="@color/gray"
             app:layout_constraintEnd_toStartOf="@+id/etAttestationTypeValue"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvAttestationAttributeTitle" />
@@ -112,7 +117,8 @@
             android:layout_marginBottom="4dp"
             android:paddingStart="8dp"
             android:text="Type"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="@+id/etAttestationTypeValue"
@@ -125,7 +131,7 @@
             android:layout_marginStart="4dp"
             android:layout_marginTop="4dp"
             android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/light_gray"
             android:cursorVisible="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
@@ -135,7 +141,7 @@
             android:paddingVertical="8dp"
             android:paddingStart="8dp"
             android:textSize="14sp"
-            android:textColor="@color/dark_gray"
+            android:textColor="@color/gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/etAttestationAttributeValue"
             app:layout_constraintTop_toBottomOf="@+id/tvAttestationTypeTitle" />
@@ -151,110 +157,21 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/clVerificationResult"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        tools:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clVerificationSummary">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clVerificationResultValid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/tvVerificationResultValidTitle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="ATTESTATION VALID"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/ivAttestationResultValid"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:padding="50dp"
-                android:layout_marginTop="12dp"
-                app:tint="@color/white"
-                android:src="@drawable/ic_badge_ok"
-                app:layout_constraintDimensionRatio="H,1:1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvVerificationResultValidTitle"
-                tools:tint="@color/white" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clVerificationResultInvalid"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/clVerificationResultValid">
-
-            <TextView
-                android:id="@+id/tvVerificationResultInvalidTitle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="ATTESTATION INVALID"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textColor="@color/white"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <ImageView
-                android:id="@+id/ivAttestationResultFail"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:padding="50dp"
-                android:layout_marginTop="12dp"
-                app:tint="@color/white"
-                android:src="@drawable/ic_badge_fail"
-                app:layout_constraintDimensionRatio="H,1:1"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvVerificationResultInvalidTitle"
-                tools:tint="@color/white" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
     <ProgressBar
         android:id="@+id/pbLoadingSpinner"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:padding="75dp"
         android:layout_gravity="center"
-        android:indeterminateTint="@color/white"
+        android:indeterminateTint="?attr/colorOnPrimary"
+        tools:indeterminateTint="@color/white"
         android:indeterminateTintMode="src_atop"
         android:visibility="gone"
         tools:visibility="visible"
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/clVerificationResult" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
