--- a/valuetransfer/src/main/res/layout/dialog_identity_details.xml
+++ b/valuetransfer/src/main/res/layout/dialog_identity_details.xml
@@ -8,8 +8,10 @@
     android:paddingHorizontal="12dp"
     android:paddingTop="12dp"
     android:paddingBottom="12dp"
-    android:backgroundTint="@color/colorPrimaryValueTransfer"
-    tools:background="@color/colorPrimaryValueTransfer">
+    android:background="@drawable/dialog_rounded_top"
+    android:backgroundTint="?attr/colorPrimary"
+    tools:backgroundTint="@color/colorPrimaryValueTransfer"
+    tools:background="@drawable/dialog_rounded_top">
 
     <TextView
         android:id="@+id/tvTitle"
@@ -19,7 +21,8 @@
         android:textSize="20sp"
         android:textAlignment="center"
         android:gravity="center_horizontal"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnPrimary"
+        tools:textColor="@color/white"
         android:textAllCaps="true"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
@@ -60,7 +63,8 @@
                     android:text="Given Names"
                     android:paddingStart="8dp"
                     android:layout_marginBottom="4dp"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnPrimary"
+                    tools:textColor="@color/white"
                     android:textStyle="italic"
                     android:textSize="12sp"
                     android:inputType="textCapWords"/>
@@ -71,11 +75,12 @@
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/pill_rounded"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/light_gray"
                     android:paddingVertical="8dp"
                     android:paddingStart="8dp"
                     android:inputType="textCapWords"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp"
+                    android:textColor="@color/black" />
 
             </LinearLayout>
 
@@ -94,7 +99,8 @@
                     android:text="Surname"
                     android:paddingStart="8dp"
                     android:layout_marginBottom="4dp"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnPrimary"
+                    tools:textColor="@color/white"
                     android:textStyle="italic"
                     android:textSize="12sp"/>
 
@@ -104,11 +110,12 @@
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/pill_rounded"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/light_gray"
                     android:paddingVertical="8dp"
                     android:paddingStart="8dp"
                     android:inputType="textCapWords"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:textColor="@color/black" />
             </LinearLayout>
         </LinearLayout>
 
@@ -136,7 +143,8 @@
                     android:text="Place of Birth"
                     android:paddingStart="8dp"
                     android:layout_marginBottom="4dp"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnPrimary"
+                    tools:textColor="@color/white"
                     android:textStyle="italic"
                     android:textSize="12sp"/>
 
@@ -146,11 +154,12 @@
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/pill_rounded"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/light_gray"
                     android:paddingVertical="8dp"
                     android:paddingStart="8dp"
                     android:inputType="textCapWords"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:textColor="@color/black" />
 
             </LinearLayout>
 
@@ -169,7 +178,8 @@
                     android:text="Date of Birth"
                     android:paddingStart="8dp"
                     android:layout_marginBottom="4dp"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnPrimary"
+                    tools:textColor="@color/white"
                     android:textStyle="italic"
                     android:textSize="12sp"/>
 
@@ -179,11 +189,12 @@
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/pill_rounded"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/light_gray"
                     android:paddingVertical="8dp"
                     android:paddingStart="8dp"
                     android:focusable="false"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:textColor="@color/black" />
             </LinearLayout>
         </LinearLayout>
 
@@ -211,7 +222,8 @@
                     android:text="Nationality"
                     android:paddingStart="8dp"
                     android:layout_marginBottom="4dp"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnPrimary"
+                    tools:textColor="@color/white"
                     android:textStyle="italic"
                     android:textSize="12sp"/>
 
@@ -221,11 +233,12 @@
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/pill_rounded"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/light_gray"
                     android:paddingVertical="8dp"
                     android:paddingStart="8dp"
                     android:inputType="textCapWords"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:textColor="@color/black" />
 
             </LinearLayout>
 
@@ -244,7 +257,8 @@
                     android:text="Gender"
                     android:paddingStart="8dp"
                     android:layout_marginBottom="4dp"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnPrimary"
+                    tools:textColor="@color/white"
                     android:textStyle="italic"
                     android:textSize="12sp"/>
 
@@ -253,6 +267,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     app:singleSelection="true"
+                    app:selectionRequired="true"
                     android:weightSum="2">
 
                     <com.google.android.material.button.MaterialButton
@@ -263,11 +278,11 @@
                         android:insetBottom="0dp"
                         android:insetTop="0dp"
                         android:layout_weight="1"
-                        android:backgroundTint="@color/white"
+                        android:backgroundTint="@color/light_gray"
                         android:text="Male"
                         android:textAllCaps="false"
                         android:textSize="12sp"
-                        android:textColor="@color/colorPrimaryValueTransfer"
+                        android:textColor="@color/black"
                         app:shapeAppearance="@style/Rounded" />
 
                     <com.google.android.material.button.MaterialButton
@@ -279,9 +294,9 @@
                         android:insetTop="0dp"
                         android:text="Female"
                         app:shapeAppearance="@style/Rounded"
-                        android:backgroundTint="@color/white"
+                        android:backgroundTint="@color/light_gray"
                         android:textSize="12sp"
-                        android:textColor="@color/colorPrimaryValueTransfer"
+                        android:textColor="@color/black"
                         android:textAllCaps="false"
                         android:layout_weight="1" />
 
@@ -313,7 +328,8 @@
                     android:text="Personal Number"
                     android:paddingStart="8dp"
                     android:layout_marginBottom="4dp"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnPrimary"
+                    tools:textColor="@color/white"
                     android:textStyle="italic"
                     android:textSize="12sp"/>
 
@@ -324,10 +340,11 @@
                     android:layout_weight="1"
                     android:inputType="number"
                     android:background="@drawable/pill_rounded"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/light_gray"
                     android:paddingVertical="8dp"
                     android:paddingStart="8dp"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:textColor="@color/black" />
 
             </LinearLayout>
 
@@ -346,7 +363,8 @@
                     android:text="Document Number"
                     android:paddingStart="8dp"
                     android:layout_marginBottom="4dp"
-                    android:textColor="@color/white"
+                    android:textColor="?attr/colorOnPrimary"
+                    tools:textColor="@color/white"
                     android:textStyle="italic"
                     android:textSize="12sp"/>
 
@@ -356,11 +374,12 @@
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:background="@drawable/pill_rounded"
-                    android:backgroundTint="@color/white"
+                    android:backgroundTint="@color/light_gray"
                     android:paddingVertical="8dp"
                     android:paddingStart="8dp"
                     android:inputType="textCapCharacters"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:textColor="@color/black" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
