--- a/valuetransfer/src/main/res/layout/dialog_qrcode.xml
+++ b/valuetransfer/src/main/res/layout/dialog_qrcode.xml
@@ -4,7 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:background="@color/colorPrimaryValueTransfer">
+    android:background="@drawable/dialog_rounded_top"
+    android:backgroundTint="?attr/colorPrimary"
+    tools:backgroundTint="@color/colorPrimaryValueTransfer"
+    tools:background="@drawable/dialog_rounded_top">
 
     <TextView
         android:id="@+id/tvTitle"
@@ -14,7 +17,8 @@
         tools:text="Dialog Title"
         android:textSize="20sp"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnPrimary"
+        tools:textColor="@color/white"
         android:textStyle="bold"
         android:textAllCaps="true"
         android:layout_marginTop="12dp"
@@ -31,7 +35,8 @@
         android:textAlignment="center"
         tools:text="Dialog subtitle"
         android:textSize="14dp"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnPrimary"
+        tools:textColor="@color/white"
         android:paddingHorizontal="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +61,8 @@
         android:maxWidth="50dp"
         app:layout_constraintDimensionRatio="H,1:1"
         android:layout_gravity="center"
-        android:indeterminateTint="@color/white"
+        android:indeterminateTint="?attr/colorOnPrimary"
+        tools:indeterminateTint="@color/white"
         android:indeterminateTintMode="src_atop"
         app:layout_constraintBottom_toBottomOf="@+id/ivQRCode"
         app:layout_constraintEnd_toEndOf="parent"
