--- a/valuetransfer/src/main/res/layout/fragment_contacts_chat.xml
+++ b/valuetransfer/src/main/res/layout/fragment_contacts_chat.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryValueTransfer">
+    tools:background="@color/colorPrimaryValueTransfer">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clSearchFilter"
@@ -14,8 +14,9 @@
         android:paddingVertical="8dp"
         android:visibility="gone"
         tools:visibility="visible"
-        android:background="@drawable/dialog_rounded_inverse"
-        android:backgroundTint="@color/colorYellow"
+        android:background="@drawable/dialog_rounded_bottom"
+        android:backgroundTint="?attr/colorAccent"
+        tools:backgroundTint="@color/colorYellow"
         android:elevation="5dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +36,7 @@
                 android:layout_height="match_parent"
                 android:background="@drawable/pill_rounded"
                 android:backgroundTint="@color/white"
+                android:popupBackground="@color/white"
                 android:padding="6dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -66,6 +68,7 @@
                 android:paddingEnd="8dp"
                 android:singleLine="true"
                 android:textColor="@color/black"
+                android:textColorHint="@color/gray"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +81,8 @@
                 android:layout_height="15dp"
                 android:layout_marginEnd="12dp"
                 android:src="@drawable/ic_baseline_close_24"
+                android:visibility="gone"
+                tools:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="@+id/etSearchMessage"
                 app:layout_constraintEnd_toEndOf="@+id/etSearchMessage"
                 app:layout_constraintTop_toTopOf="@+id/etSearchMessage"
@@ -99,7 +104,8 @@
         android:id="@+id/clMessageInputRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryValueTransfer"
+        android:background="?attr/colorPrimary"
+        tools:background="@color/colorPrimaryValueTransfer"
         android:elevation="20dp"
         android:paddingHorizontal="8dp"
         android:paddingVertical="12dp"
@@ -113,7 +119,8 @@
             android:layout_height="35dp"
             android:layout_gravity="center"
             android:background="@drawable/circle"
-            android:backgroundTint="@color/colorYellow"
+            android:backgroundTint="?attr/colorAccent"
+            tools:backgroundTint="@color/colorYellow"
             android:padding="6dp"
             android:src="@drawable/ic_baseline_attach_file_24"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -126,7 +133,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/pill_rounded"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="@color/light_gray"
             android:hint="Type your message"
             android:inputType="textMultiLine"
             android:maxLines="4"
@@ -135,6 +142,8 @@
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             android:textSize="14sp"
+            android:textColor="@color/black"
+            android:textColorHint="@color/gray"
             app:layout_constraintBottom_toBottomOf="@+id/ivAttachment"
             app:layout_constraintEnd_toStartOf="@+id/btnSendMessage"
             app:layout_constraintStart_toEndOf="@+id/ivAttachment" />
@@ -148,7 +157,7 @@
             android:text="Send"
             app:layout_constraintBottom_toBottomOf="@+id/etMessage"
             app:layout_constraintEnd_toEndOf="parent"
-            tools:backgroundTint="@color/colorPrimaryDark" />
+            tools:backgroundTint="@color/colorPrimaryDarkValueTransfer" />
 
         <ProgressBar
             android:id="@+id/pbSendMessage"
