--- a/valuetransfer/src/main/res/layout/fragment_settings.xml
+++ b/valuetransfer/src/main/res/layout/fragment_settings.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="12dp"
+    android:background="?attr/colorPrimary"
     tools:background="@color/colorPrimaryValueTransfer">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,14 +16,16 @@
         android:layout_marginTop="8dp"
         android:padding="12dp"
         android:background="@drawable/pill_rounded"
-        android:backgroundTint="@color/colorPrimaryDarkValueTransfer"
+        android:backgroundTint="?attr/colorPrimaryDark"
+        tools:backgroundTint="@color/colorPrimaryDarkValueTransfer"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Light Theme"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -33,8 +36,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Dark Theme"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -46,7 +61,8 @@
         android:layout_marginTop="12dp"
         android:layout_marginEnd="8dp"
         android:text="About App"
-        android:textColor="@color/white"
+        android:textColor="?attr/colorOnPrimary"
+        tools:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clThemeSelect" />
@@ -59,14 +75,16 @@
         android:layout_marginTop="8dp"
         android:padding="12dp"
         android:background="@drawable/pill_rounded"
-        android:backgroundTint="@color/colorPrimaryDarkValueTransfer"
+        android:backgroundTint="?attr/colorPrimaryDark"
+        tools:backgroundTint="@color/colorPrimaryDarkValueTransfer"
         app:layout_constraintTop_toBottomOf="@+id/tvAboutAppTitle">
 
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="GDPR"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -78,15 +96,11 @@
             android:layout_height="30dp"
             android:padding="4dp"
             tools:tint="@color/light_gray"
-            app:tint="@color/light_gray"
+            app:tint="?attr/colorSecondary"
             android:src="@drawable/ic_baseline_arrow_forward_ios_24"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
