--- a/valuetransfer/src/main/res/layout/fragment_wallet_vt.xml
+++ b/valuetransfer/src/main/res/layout/fragment_wallet_vt.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/white"
+                app:tint="?attr/colorOnPrimary"
                 tools:tint="@color/white" />
 
             <TextView
@@ -44,7 +44,8 @@
                 android:gravity="center"
                 android:paddingHorizontal="8dp"
                 android:text="A personal identity is required for this application. It is important to provide the correct details."
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -65,7 +66,7 @@
             android:layout_height="wrap_content"
             android:padding="12dp"
             android:text="* You will always remain the owner of your own identity. As an owner of a self-sovereign identity (SSI) you decide who is able to view the identity and what information is visible."
-            android:textColor="@color/light_gray"
+            android:textColor="@color/gray"
             android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -107,7 +108,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:text="Identity"
-                        android:textColor="@color/white"
+                        android:textColor="?attr/colorOnPrimary"
+                        tools:textColor="@color/white"
                         android:textSize="32sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -120,7 +122,7 @@
                         android:layout_marginTop="2dp"
                         android:padding="4dp"
                         tools:tint="@color/colorPrimaryDarkValueTransfer"
-                        app:tint="@color/colorPrimaryDarkValueTransfer"
+                        app:tint="?attr/colorPrimaryDark"
                         android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                         app:layout_constraintBottom_toBottomOf="@+id/tvIdentityTitle"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -152,7 +154,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:text="Exchange"
-                        android:textColor="@color/white"
+                        android:textColor="?attr/colorOnPrimary"
+                        tools:textColor="@color/white"
                         android:textSize="32sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -165,7 +168,7 @@
                         android:layout_marginTop="2dp"
                         android:padding="4dp"
                         tools:tint="@color/colorPrimaryDarkValueTransfer"
-                        app:tint="@color/colorPrimaryDarkValueTransfer"
+                        app:tint="?attr/colorPrimaryDark"
                         android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                         app:layout_constraintBottom_toBottomOf="@+id/tvExchangeTitle"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -184,14 +187,14 @@
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="0dp"
                             android:layout_height="70dp"
-                            android:background="@drawable/square_rounded_dark_green"
+                            android:background="@drawable/square_rounded"
                             android:paddingStart="16dp"
                             android:paddingEnd="8dp"
+                            tools:background="@drawable/square_rounded_dark_green"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent"
-                            tools:background="@drawable/square_rounded_dark_green">
+                            app:layout_constraintTop_toTopOf="parent">
 
                             <ImageView
                                 android:id="@+id/ivBalanceIcon"
@@ -201,7 +204,7 @@
                                 app:layout_constraintBottom_toBottomOf="parent"
                                 app:layout_constraintStart_toStartOf="parent"
                                 app:layout_constraintTop_toTopOf="parent"
-                                app:tint="@color/white"
+                                app:tint="?attr/colorOnPrimary"
                                 tools:tint="@color/white" />
 
                             <TextView
@@ -210,7 +213,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginStart="8dp"
                                 android:text="0.00"
-                                android:textColor="@color/white"
+                                android:textColor="?attr/colorOnPrimary"
+                                tools:textColor="@color/white"
                                 android:textSize="24sp"
                                 android:textStyle="bold"
                                 app:layout_constraintBottom_toBottomOf="parent"
@@ -224,7 +228,8 @@
                                 android:layout_marginStart="12dp"
                                 app:layout_constraintDimensionRatio="H,1:1"
                                 android:layout_gravity="center"
-                                android:indeterminateTint="@color/white"
+                                android:indeterminateTint="?attr/colorOnPrimary"
+                                tools:indeterminatTint="@color/white"
                                 android:indeterminateTintMode="src_atop"
                                 app:layout_constraintBottom_toBottomOf="@+id/tvBalanceAmount"
                                 app:layout_constraintStart_toEndOf="@+id/tvBalanceAmount"
@@ -287,7 +292,8 @@
                         android:layout_marginStart="12dp"
                         android:layout_marginTop="4dp"
                         android:layout_marginEnd="2dp"
-                        android:background="@drawable/square_rounded_dark_green"
+                        android:background="@drawable/square_rounded"
+                        tools:background="@drawable/square_rounded_dark_green"
                         app:layout_constraintEnd_toStartOf="@+id/clTransferContact"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/clBalances">
@@ -299,7 +305,8 @@
                             android:layout_marginStart="12dp"
                             android:gravity="center_vertical"
                             android:text="Transfer"
-                            android:textColor="@color/white"
+                            android:textColor="?attr/colorOnPrimary"
+                            tools:textColor="@color/white"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -313,7 +320,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:tint="@color/white"
+                            app:tint="?attr/colorOnPrimary"
                             tools:tint="@color/white" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -324,7 +331,8 @@
                         android:layout_marginStart="2dp"
                         android:layout_marginTop="4dp"
                         android:layout_marginEnd="2dp"
-                        android:background="@drawable/square_rounded_dark_green"
+                        android:background="@drawable/square_rounded"
+                        tools:background="@drawable/square_rounded_dark_green"
                         app:layout_constraintEnd_toStartOf="@+id/clRequest"
                         app:layout_constraintStart_toEndOf="@+id/clTransferQR"
                         app:layout_constraintTop_toBottomOf="@+id/clBalances">
@@ -336,7 +344,8 @@
                             android:layout_marginStart="12dp"
                             android:gravity="center_vertical"
                             android:text="Transfer"
-                            android:textColor="@color/white"
+                            android:textColor="?attr/colorOnPrimary"
+                            tools:textColor="@color/white"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -350,7 +359,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:tint="@color/white"
+                            app:tint="?attr/colorOnPrimary"
                             tools:tint="@color/white" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -361,7 +370,8 @@
                         android:layout_marginStart="2dp"
                         android:layout_marginTop="4dp"
                         android:layout_marginEnd="12dp"
-                        android:background="@drawable/square_rounded_dark_green"
+                        android:background="@drawable/square_rounded"
+                        tools:background="@drawable/square_rounded_dark_green"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/clTransferContact"
                         app:layout_constraintTop_toBottomOf="@+id/clBalances">
@@ -373,7 +383,8 @@
                             android:layout_marginStart="12dp"
                             android:gravity="center_vertical"
                             android:text="Request"
-                            android:textColor="@color/white"
+                            android:textColor="?attr/colorOnPrimary"
+                            tools:textColor="@color/white"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
@@ -387,7 +398,7 @@
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent"
-                            app:tint="@color/white"
+                            app:tint="?attr/colorOnPrimary"
                             tools:tint="@color/white" />
                     </androidx.constraintlayout.widget.ConstraintLayout>
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -409,7 +420,8 @@
                         android:layout_marginStart="20dp"
                         android:layout_marginTop="12dp"
                         android:text="Contacts"
-                        android:textColor="@color/white"
+                        tools:textColor="@color/white"
+                        android:textColor="?attr/colorOnPrimary"
                         android:textSize="32sp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -422,7 +434,7 @@
                         android:layout_marginTop="2dp"
                         android:padding="4dp"
                         tools:tint="@color/colorPrimaryDarkValueTransfer"
-                        app:tint="@color/colorPrimaryDarkValueTransfer"
+                        app:tint="?attr/colorPrimaryDark"
                         android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                         app:layout_constraintBottom_toBottomOf="@+id/tvChatsSocialTitle"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -437,7 +449,8 @@
                         android:background="@drawable/pill_rounded"
                         android:paddingVertical="4dp"
                         android:text="There are no conversations with contacts yet"
-                        android:textColor="@color/white"
+                        android:textColor="?attr/colorOnPrimary"
+                        tools:textColor="@color/white"
                         android:textStyle="italic"
                         android:visibility="gone"
                         app:layout_constraintEnd_toEndOf="parent"
