--- a/valuetransfer/src/main/res/layout/item_contacts.xml
+++ b/valuetransfer/src/main/res/layout/item_contacts.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimaryDarkValueTransfer">
+    android:background="?attr/colorPrimaryDark"
+    tools:background="@color/colorPrimaryDarkValueTransfer">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="60dp"
@@ -29,52 +31,6 @@
                 android:layout_gravity="center" />
         </FrameLayout>
 
-<!--        <ImageView-->
-<!--            android:id="@+id/ivContactNewBackground"-->
-<!--            android:layout_width="50dp"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_marginHorizontal="8dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:background="@drawable/circle"-->
-<!--            android:backgroundTint="@color/white"-->
-<!--            android:padding="15dp"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:tint="@color/white" />-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/ivContactNew"-->
-<!--            android:layout_width="50dp"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_marginHorizontal="8dp"-->
-<!--            android:layout_marginTop="8dp"-->
-<!--            android:background="@drawable/circle"-->
-<!--            android:backgroundTint="@color/gray"-->
-<!--            android:padding="15dp"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:tint="@color/colorPrimaryValueTransfer" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tvContactInitials"-->
-<!--            android:layout_width="50dp"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:layout_marginHorizontal="8dp"-->
-<!--            android:gravity="center"-->
-<!--            android:padding="5dp"-->
-<!--            android:text="AA"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="16sp"-->
-<!--            android:textStyle="bold"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/ivContactNew"-->
-<!--            app:layout_constraintEnd_toEndOf="@+id/ivContactNew"-->
-<!--            app:layout_constraintStart_toStartOf="@+id/ivContactNew"-->
-<!--            app:layout_constraintTop_toTopOf="@+id/ivContactNew" />-->
-
         <TextView
             android:id="@+id/tvContactName"
             android:layout_width="match_parent"
@@ -85,7 +41,8 @@
             android:gravity="center"
             android:maxLines="2"
             android:text="Contact"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
