--- a/valuetransfer/src/main/res/layout/item_identity_attestation.xml
+++ b/valuetransfer/src/main/res/layout/item_identity_attestation.xml
@@ -12,7 +12,8 @@
         android:id="@+id/clChatCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@drawable/square_rounded_dark_green"
+        android:background="@drawable/square_rounded"
+        tools:background="@drawable/square_rounded_dark_green"
         android:paddingHorizontal="12dp"
         android:paddingVertical="12dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,7 +32,8 @@
                 android:id="@+id/tvAttestationNameValue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +48,8 @@
                 android:gravity="end"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/light_gray"
+                android:textColor="?attr/colorSecondary"
+                tools:textColor="@color/gray"
                 android:textSize="12sp"
                 android:textStyle="italic"
                 app:layout_constraintEnd_toEndOf="@+id/tvAttestationHash"
@@ -62,7 +65,8 @@
                 android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textSize="14sp"
                 android:typeface="monospace"
                 app:layout_constraintEnd_toStartOf="@+id/clAttestationButton"
@@ -77,7 +81,8 @@
                 android:layout_marginEnd="8dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/white"
+                android:textColor="?attr/colorOnPrimary"
+                tools:textColor="@color/white"
                 android:textSize="14sp"
                 android:typeface="monospace"
                 app:layout_constraintEnd_toStartOf="@+id/clAttestationButton"
@@ -90,7 +95,8 @@
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:background="@drawable/pill_rounded"
-                android:backgroundTint="@color/colorPrimaryValueTransfer"
+                android:backgroundTint="?attr/colorPrimary"
+                tools:backgroundTint="@color/colorPrimaryValueTransfer"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -108,7 +114,7 @@
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/white"
+                    app:tint="?attr/colorOnPrimary"
                     tools:tint="@color/white"/>
 
                 <ImageView
@@ -123,7 +129,7 @@
                     app:layout_constraintDimensionRatio="1:1"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:tint="@color/white"
+                    app:tint="?attr/colorOnPrimary"
                     tools:tint="@color/white"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
