--- a/valuetransfer/src/main/res/layout/item_identity_detail.xml
+++ b/valuetransfer/src/main/res/layout/item_identity_detail.xml
@@ -11,7 +11,7 @@
         android:id="@+id/clIdentityCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/square_rounded_dark_green"
+        android:background="@drawable/square_rounded"
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Given Names / Surname"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Gender"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +47,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Jan Jansen"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +59,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Male"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,7 +72,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Date of Birth / Place of Birth"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
@@ -80,7 +85,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Nationality"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +97,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="March 7, 1975, Amsterdam"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -102,7 +109,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Netherlands"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -114,7 +122,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Personal Number"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
@@ -126,7 +135,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Document Number"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
@@ -137,7 +147,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1065726824"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -148,7 +159,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="U25GIJH43D2"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -160,7 +172,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:text="Public Key"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
@@ -173,7 +186,8 @@
             android:ellipsize="end"
             android:maxLines="2"
             android:text="4c69624e61434c504b3af0b7d61043e1043cdde4285074fe547f7e0ef20448207948dee70ad27579be698f9da2afc0dae3cb6ddd9bd5120441f8fbe579e2553bbd6dbf7965581294dbe3"
-            android:textColor="@color/white"
+            android:textColor="?attr/colorOnPrimary"
+            tools:textColor="@color/white"
             android:textSize="14sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/btnQRCode"
@@ -187,7 +201,8 @@
             android:layout_marginStart="12dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/ic_qr_code_simple"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="?attr/colorOnPrimary"
+            tools:backgroundTint="@color/white"
             app:layout_constraintEnd_toStartOf="@+id/btnCopyPublicKey"
             app:layout_constraintStart_toEndOf="@+id/tvPublicKeyValue"
             app:layout_constraintTop_toTopOf="@+id/tvPublicKeyValue" />
@@ -197,7 +212,8 @@
             android:layout_width="25dp"
             android:layout_height="25dp"
             android:background="@drawable/ic_copy_public_key"
-            android:backgroundTint="@color/white"
+            android:backgroundTint="?attr/colorOnPrimary"
+            tools:backgroundTint="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tvPublicKeyValue" />
 
