--- a/valuetransfer/src/main/res/layout/main_activity_vt.xml
+++ b/valuetransfer/src/main/res/layout/main_activity_vt.xml
@@ -10,7 +10,8 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/colorPrimaryValueTransfer"
+        android:background="?attr/colorPrimary"
+        tools:background="@color/colorPrimaryValueTransfer"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
@@ -37,7 +38,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/colorPrimaryValueTransfer"
+        android:background="?attr/colorPrimary"
+        tools:background="@color/colorPrimaryValueTransfer"
         app:menu="@menu/valuetransfer_navigation_menu"
         />
 
