--- a/valuetransfer/src/main/res/menu/contact_chat_options.xml
+++ b/valuetransfer/src/main/res/menu/contact_chat_options.xml
@@ -12,7 +12,7 @@
         android:title="Copy Public Key" />
     <item
         android:id="@+id/actionShareContact"
-        android:title="Share Contact" />
+        android:title="Share This Contact" />
     <item
         android:id="@+id/actionSearchFilterChat"
         android:icon="@drawable/ic_search_filter"
