--- a/valuetransfer/src/main/res/values/styles.xml
+++ b/valuetransfer/src/main/res/values/styles.xml
@@ -1,38 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme" />
-
-    <style name="Theme.ValueTransfer" parent="Theme.MaterialComponents.Light.DarkActionBar">
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryDark">@color/light_gray</item>
+    // ACTION BAR TEXT STYLE
+    <style name="ActionBar" parent="@style/Widget.AppCompat.ActionBar.Solid">
+        <item name="titleTextStyle">@style/ActionBarTitleStyle</item>
+        <item name="subtitleTextStyle">@style/ActionBarSubTitleStyle</item>
     </style>
 
-    <style name="MenuLabelStyle">
-        <item name="android:textColor">@color/text_tertiary</item>
+    <style name="ActionBarTitleStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
+        <item name="android:textSize">24dp</item>
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="ActionBarSubTitleStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle">
+        <item name="android:textSize">12dp</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+
+    // OPTIONS MENU STYLE
+    <style name="OptionsMenu" parent="Widget.AppCompat.PopupMenu.Overflow" >
+        <item name="android:overlapAnchor">false</item>
+        <item name="android:dropDownVerticalOffset">4.0dip</item>
+        <item name="android:textColor">?attr/colorOnPrimary</item>
+        <item name="android:backgroundTint">?attr/colorPrimary</item>
+        <item name="android:itemBackground">?attr/colorPrimary</item>
+    </style>
+
+    // BOTTOM NAVIGATION STYLE
+    <style name="BottomNavigation">
+        <item name="android:background">?attr/colorPrimary</item>
+        <item name="itemBackground">?attr/colorPrimary</item>
+        <item name="itemIconTint">@drawable/bottom_navigation_color</item>
+        <item name="itemTextColor">@drawable/bottom_navigation_color</item>
+        <item name="labelVisibilityMode">labeled</item>
+        <item name="paddingStart">10dp</item>
+        <item name="paddingEnd">10dp</item>
+    </style>
+
+    // Menu Label Style
+    <style name="MenuLabelStyle">
+        <item name="android:textColor">@color/colorRed</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    // Rounded Shape
     <style name="Rounded" parent="ShapeAppearance.MaterialComponents.SmallComponent">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">10dp</item>
     </style>
 
-    <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="android:backgroundTint">@drawable/dialog_rounded</item>
-    </style>
-
+    // Bottom Sheet Dialog
     <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog">
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@color/colorPrimaryValueTransfer</item>
     </style>
 
     <style name="BottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
-        <item name="android:background">@drawable/dialog_rounded</item>
-    </style>
-
-    <style name="BottomSheetRed" parent="@style/Widget.Design.BottomSheet.Modal">
-        <item name="android:background">@drawable/dialog_rounded_red</item>
+        <item name="android:background">@drawable/dialog_rounded_top</item>
     </style>
 
     <style name="BaseBottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
@@ -40,18 +63,10 @@
         <item name="bottomSheetStyle">@style/BottomSheet</item>
         <item name="android:windowSoftInputMode">adjustResize</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@color/colorPrimaryValueTransfer</item>
     </style>
 
-    <style name="BaseBottomSheetDialogRed" parent="@style/Theme.Design.Light.BottomSheetDialog">
-        <item name="android:windowIsFloating">false</item>
-        <item name="bottomSheetStyle">@style/BottomSheetRed</item>
-        <item name="android:windowSoftInputMode">adjustResize</item>
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@color/colorRed</item>
-    </style>
-
-    <style name="ButtonRounded" >
+    // Buttons
+    <style name="ButtonRounded">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">35dp</item>
         <item name="android:layout_gravity">center_horizontal</item>
@@ -62,14 +77,14 @@
         <item name="android:textSize">12sp</item>
     </style>
 
-    <style name="ButtonWhiteRounded" parent="ButtonRounded">
-        <item name="backgroundTint">@color/white</item>
+    <style name="ButtonLightGrayRounded" parent="ButtonRounded">
+        <item name="backgroundTint">@color/light_gray</item>
         <item name="android:textColor">@color/colorPrimaryValueTransfer</item>
     </style>
 
     <style name="ButtonRedRounded" parent="ButtonRounded">
-        <item name="backgroundTint">@color/white</item>
-        <item name="android:textColor">#FF6961</item>
+        <item name="backgroundTint">@color/light_gray</item>
+        <item name="android:textColor">@color/colorRed</item>
     </style>
 
     <style name="ButtonGreenRounded" parent="ButtonRounded">
@@ -82,18 +97,18 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    // Date Picker Dialog
     <style name="DatePickerDialogTheme" parent="Theme.AppCompat.Light.Dialog">
         <item name="colorAccent">@color/colorPrimaryValueTransfer</item>
         <item name="android:buttonBarPositiveButtonStyle">@style/ButtonGreenRounded</item>
-        <item name="android:buttonBarNegativeButtonStyle">@style/ButtonWhiteRounded</item>
+        <item name="android:buttonBarNegativeButtonStyle">@style/ButtonLightGrayRounded</item>
     </style>
 
+    // Chat Message item style
     <style name="ChatMessageItem">
         <item name="android:ellipsize">end</item>
         <item name="android:paddingStart">12dp</item>
         <item name="android:paddingEnd">12dp</item>
-<!--        <item name="android:paddingTop">8dp</item>-->
-<!--        <item name="android:paddingBottom">8dp</item>-->
         <item name="android:textSize">14sp</item>
     </style>
 
@@ -102,15 +117,4 @@
         <item name="android:textSize">10sp</item>
         <item name="android:typeface">monospace</item>
     </style>
-
-    <style name="BottomNavigation">
-        <item name="android:background">@color/colorPrimaryValueTransfer</item>
-        <item name="itemBackground">@color/colorPrimaryValueTransfer</item>
-        <item name="itemIconTint">@drawable/bottom_navigation_color</item>
-        <item name="itemTextColor">@drawable/bottom_navigation_color</item>
-        <item name="labelVisibilityMode">labeled</item>
-        <item name="paddingStart">10dp</item>
-        <item name="paddingEnd">10dp</item>
-    </style>
-
 </resources>
